@@ -1,3 +1,10 @@
+Mon May 27 15:21:14 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>
+
+	* lib/adlint/exam/c_builtin/cc1_code.rb : Fix incomplete object
+	  cross-reference extraction in order to record object references
+	  within global scope in case of global function table initialization.
+	* lib/adlint/code.rb : Ditto.
+
 Fri May 24 19:11:52 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>
 
 	* lib/adlint/cc1/parser.y : Remove useless state management of the
